# Ascender-uv

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: cache.yaml  lint-and-test.yaml
environments/: Dockerfile  envs.env.sample
environments/ci/: docker-compose.yaml
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
